Login and Get submissions

--- a/src/pages/layouts/layout-default.jade
+++ b/src/pages/layouts/layout-default.jade
@@ -9,17 +9,18 @@ html(lang="en")
     meta(name='description', content='Inkbunny React client')
     meta(name='keywords', content='inkbunny')
     meta(name='author' content='Hoya Kim.')
+    meta(name="referrer" content="https://inkbunny.net")
 
     // ## CDN stylesheets
-    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css')
-    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css')
-    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css')
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous")
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/fontawesome/4.5.0/css/font-awesome.min.css')
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/animatecss/3.5.1/animate.min.css')
     link(rel='stylesheet', href='#{app_root}/common/css/app.css')
 
     // ## CDN javascripts
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/core-js/1.2.5/core.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.min.js')
+    script(src='https://cdn.jsdelivr.net/core-js/2.0.3/core.min.js')
+    script(src='https://cdn.jsdelivr.net/modernizr/2.8.3/modernizr.min.js')
+    script(src='https://cdn.jsdelivr.net/requirejs/2.1.22/require.min.js')
 
     script(src='#{app_root}/common/js/app.js')
 
