Build system upgrade.

--- a/src/less/flat-ui/variables.less
+++ b/src/less/flat-ui/variables.less
@@ -41,10 +41,10 @@
 // Grays
 @gray:                      @concrete;
 @gray-light:                @silver;
-@inverse:                   #dddddd;
+@inverse:                   white;
 
 // Brand colors
-@brand-primary:             #222;
+@brand-primary:             @wet-asphalt;
 @brand-secondary:           @turquoise;
 @brand-success:             @emerald;
 @brand-warning:             @sun-flower;
@@ -361,7 +361,7 @@
 // Basics of a navbar
 @zindex-navbar:              1000;
 @zindex-navbar-fixed:        1030;
-@navbar-height-base:         50px;
+@navbar-height-base:         53px;
 @navbar-height-large:        76px;
 @navbar-input-line-height:   1.4; // ~21px
 @navbar-margin-bottom:       @line-height-computed;
