--- a/src/less/flat-ui/flat-ui.less
+++ b/src/less/flat-ui/flat-ui.less
@@ -10,8 +10,8 @@
 
 // Loading custom fonts
 //@import url("https://fonts.googleapis.com/css?family=Lato:400,700,700italic,900,400italic,300");
-//@import "modules/local-fonts";
-//@import "modules/glyphicons";
+@import "modules/local-fonts";
+@import "modules/glyphicons";
 
 // Modules
 @import "modules/scaffolding";
@@ -38,8 +38,6 @@
 @import "modules/share";
 @import "modules/video";
 @import "modules/todo-list";
-
-@import "modules/panel";
 
 // Examples
 @import "modules/palette";
